// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotationBaseDto invalid response for deliveryBy earlier than scheduledAt 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "deliveryBy must be later than scheduleAt, now",
    },
    "property": "deliveryBy",
    "value": "2022-05-21T00:00:00.000Z",
  },
]
`;

exports[`QuotationBaseDto invalid response for deliveryBy not a allowed value xxx 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "deliveryBy must be later than scheduleAt, now",
      "isDateString": "deliveryBy must be a valid ISO 8601 date string",
    },
    "property": "deliveryBy",
    "value": "xxx",
  },
]
`;

exports[`QuotationBaseDto invalid response for expireAt not a allowed value xxx 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDateString": "expireAt must be a valid ISO 8601 date string",
    },
    "property": "expireAt",
    "value": "xxx",
  },
]
`;

exports[`QuotationBaseDto invalid response for invalid nested object inside array stops 1`] = `
Array [
  ValidationError {
    "children": Array [
      ValidationError {
        "children": Array [
          ValidationError {
            "children": Array [],
            "constraints": Object {
              "isString": "address must be a string",
            },
            "property": "address",
            "value": undefined,
          },
        ],
        "property": "0",
        "value": QuotationStopDto {
          "address": undefined,
          "coordinates": undefined,
        },
      },
    ],
    "constraints": Object {
      "arrayMinSize": "stops must contain at least 2 elements",
    },
    "property": "stops",
    "value": Array [
      QuotationStopDto {
        "address": undefined,
        "coordinates": undefined,
      },
    ],
  },
]
`;

exports[`QuotationBaseDto invalid response for item as an invalid nested object 1`] = `
Array [
  ValidationError {
    "children": Array [
      ValidationError {
        "constraints": Object {
          "nestedValidation": "nested property item must be either object or array",
        },
        "property": "item",
        "target": [Function],
        "value": "xxx",
      },
    ],
    "property": "item",
    "value": "xxx",
  },
]
`;

exports[`QuotationBaseDto invalid response for missing deliveryBy 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "deliveryBy must be later than scheduleAt, now",
      "isDateString": "deliveryBy must be a valid ISO 8601 date string",
    },
    "property": "deliveryBy",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for missing expireAt 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDateString": "expireAt must be a valid ISO 8601 date string",
    },
    "property": "expireAt",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for missing item 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isDefined": "item should not be null or undefined",
    },
    "property": "item",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for missing location 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "location must be a string",
    },
    "property": "location",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for missing quotationId 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "quotationId must be a string",
      "matches": "quotationId must match /^[0-9]{12}$/ regular expression",
    },
    "property": "quotationId",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for missing scheduleAt 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "scheduleAt must be later than now",
      "isDateString": "scheduleAt must be a valid ISO 8601 date string",
    },
    "property": "scheduleAt",
    "value": undefined,
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "deliveryBy must be later than scheduleAt, now",
    },
    "property": "deliveryBy",
    "value": "2022-05-21T01:00:00.000Z",
  },
]
`;

exports[`QuotationBaseDto invalid response for missing stops 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayMaxSize": "stops must contain not more than 2 elements",
      "arrayMinSize": "stops must contain at least 2 elements",
      "isArray": "stops must be an array",
      "isDefined": "stops should not be null or undefined",
    },
    "property": "stops",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseDto invalid response for quotationId not a allowed value xxx 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "matches": "quotationId must match /^[0-9]{12}$/ regular expression",
    },
    "property": "quotationId",
    "value": "xxx",
  },
]
`;

exports[`QuotationBaseDto invalid response for scheduleAt not a allowed value xxx 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "scheduleAt must be later than now",
      "isDateString": "scheduleAt must be a valid ISO 8601 date string",
    },
    "property": "scheduleAt",
    "value": "xxx",
  },
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsLaterThan": "deliveryBy must be later than scheduleAt, now",
    },
    "property": "deliveryBy",
    "value": "2022-05-21T01:00:00.000Z",
  },
]
`;

exports[`QuotationBaseDto invalid response for stops has less than 2 of items in array 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayMinSize": "stops must contain at least 2 elements",
    },
    "property": "stops",
    "value": Array [
      QuotationStopDto {
        "address": "999 Prince Edward Road",
        "coordinates": QuotationStopCoordinatesDto {
          "lat": "22.335313",
          "lng": "114.175840",
        },
      },
    ],
  },
]
`;

exports[`QuotationBaseDto invalid response for stops has more than 2 of items in array 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayMaxSize": "stops must contain not more than 2 elements",
    },
    "property": "stops",
    "value": Array [
      QuotationStopDto {
        "address": "999 Prince Edward Road",
        "coordinates": QuotationStopCoordinatesDto {
          "lat": "22.335313",
          "lng": "114.175840",
        },
      },
      QuotationStopDto {
        "address": "999 Prince Edward Road",
        "coordinates": QuotationStopCoordinatesDto {
          "lat": "22.335313",
          "lng": "114.175840",
        },
      },
      QuotationStopDto {
        "address": "999 Prince Edward Road",
        "coordinates": QuotationStopCoordinatesDto {
          "lat": "22.335313",
          "lng": "114.175840",
        },
      },
    ],
  },
]
`;

exports[`QuotationBaseDto invalid response for stops not an array 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "arrayMaxSize": "stops must contain not more than 2 elements",
      "arrayMinSize": "stops must contain at least 2 elements",
      "isArray": "stops must be an array",
    },
    "property": "stops",
    "value": QuotationStopDto {
      "address": "999 Prince Edward Road",
      "coordinates": QuotationStopCoordinatesDto {
        "lat": "22.335313",
        "lng": "114.175840",
      },
    },
  },
]
`;

exports[`QuotationBaseItemDto invalid response for categories not an array 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isArray": "categories must be an array",
    },
    "property": "categories",
    "value": "test",
  },
]
`;

exports[`QuotationBaseItemDto invalid response for handlingInstructions not an array 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isArray": "handlingInstructions must be an array",
    },
    "property": "handlingInstructions",
    "value": "test",
  },
]
`;

exports[`QuotationBaseItemDto invalid response for missing quantity 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNumber": "quantity must be a number conforming to the specified constraints",
    },
    "property": "quantity",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseItemDto invalid response for missing weight 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNumber": "weight must be a number conforming to the specified constraints",
    },
    "property": "weight",
    "value": undefined,
  },
]
`;

exports[`QuotationBaseItemDto invalid response for quantity not an number 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNumber": "quantity must be a number conforming to the specified constraints",
    },
    "property": "quantity",
    "value": "xxx",
  },
]
`;

exports[`QuotationBaseItemDto invalid response for weight not an number 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isNumber": "weight must be a number conforming to the specified constraints",
    },
    "property": "weight",
    "value": "xxx",
  },
]
`;
